--- a/oauth-server/src/main/resources/application.properties
+++ b/oauth-server/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=9001
 spring.redis.database=1
 spring.redis.host=localhost
 spring.redis.port=6379
+
+security.oauth2.resource.user-info-uri=http://localhost:9001/userinfo
+security.oauth2.resource.prefer-token-info=false
+
+eureka.client.service-url.defaultZone=http://localhost:9006/eureka/
+#eureka.client.register-with-eureka=true
