--- a/oauth-server/pom.xml
+++ b/oauth-server/pom.xml
@@ -10,6 +10,18 @@
 	<artifactId>oauth-server</artifactId>
 	<name>oauth-server</name>
 	<packaging>jar</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>
+				spring-cloud-starter-netflix-eureka-client
+			</artifactId>
+		</dependency>
+	</dependencies>
 	<!-- <plugins>
 		<plugin>
 			<groupId>org.springframework.boot</groupId>
