--- a/service-eureka/pom.xml
+++ b/service-eureka/pom.xml
@@ -7,12 +7,11 @@
 		<artifactId>oauth2</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>material-client</artifactId>
-	<name>material-client</name>
+	<artifactId>service-eureka</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-oauth2</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 	</dependencies>
 </project>
