--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -7,4 +7,16 @@
   </parent>
   <artifactId>user-service</artifactId>
   <name>user-service</name>
+  <dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>
+				spring-cloud-starter-netflix-eureka-client
+			</artifactId>
+		</dependency>
+  </dependencies>
 </project>
