--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 spring.application.name=user-service
 server.port=9002
-spring.redis.database=1
-spring.redis.host=localhost
-spring.redis.port=6379
-security.oauth2.client.client-id=user-client
-security.oauth2.client.client-secret=user-secret-8888
-security.oauth2.client.user-authorization-uri=http://localhost:9001/oauth/authorize
-security.oauth2.client.access-token-uri=http://localhost:9001/oauth/token
-security.oauth2.authorization.check-token-access=http://localhost:6001/oauth/token_key
+
+#spring.redis.database=1
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#security.oauth2.client.client-id=user-client
+#security.oauth2.client.client-secret=user-secret-8888
+#security.oauth2.client.user-authorization-uri=http://localhost:9001/oauth/authorize
+#security.oauth2.client.access-token-uri=http://localhost:9001/oauth/token
+security.oauth2.authorization.check-token-access=http://localhost:9001/oauth/check_token
 #security.oauth2.resource.id=user-client
-#security.oauth2.resource.user-info-uri=user-info
-security.oauth2.resource.jwt.key-value=sk
-security.oauth2.resource.jwt.key-uri=http://localhost:6001/oauth/token_key
+security.oauth2.resource.user-info-uri=http://localhost:9001/userinfo
+#security.oauth2.resource.token-info-uri=http://localhost:9001/oauth/check_token
+security.oauth2.resource.prefer-token-info=false
+
+#使用jwt进行token的验证
+#security.oauth2.resource.jwt.key-value=sk
+#security.oauth2.resource.jwt.key-uri=http://localhost:6001/oauth/token_key
+
+eureka.client.service-url.defaultZone=http://localhost:9006/eureka/
